syntax = "proto3";
package ClanNetwork.clannetwork.claim.v1beta1;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "clan/claim/v1beta1/params.proto";
import "clan/claim/v1beta1/claim_record.proto";
import "clan/claim/v1beta1/action_record.proto";
import "clan/claim/v1beta1/claim_eth_record.proto";
// this line is used by starport scaffolding # 1
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/ClanNetwork/clan-network/x/claim/types";

// Query defines the gRPC querier service.
service Query {
  
  rpc ModuleAccountBalance(QueryModuleAccountBalanceRequest)
      returns (QueryModuleAccountBalanceResponse) {
    option (google.api.http).get =
        "/clan/claim/v1beta1/module_account_balance";
  }
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/clan/claim/v1beta1/params";
  }
  rpc ClaimRecord(QueryClaimRecordRequest) returns (QueryClaimRecordResponse) {
    option (google.api.http).get =
        "/clan/claim/v1beta1/claim_record/{address}";
  }
  rpc ClaimableForAction(QueryClaimableForActionRequest)
      returns (QueryClaimableForActionResponse) {
    option (google.api.http).get =
        "/clan/claim/v1beta1/claimable_for_action/{address}/{action}";
  }
  rpc TotalClaimable(QueryTotalClaimableRequest)
      returns (QueryTotalClaimableResponse) {
    option (google.api.http).get =
        "/clan/claim/v1beta1/total_claimable/{address}";
  }
  // Queries a ClaimEthRecord by index.
	rpc ClaimEthRecord(QueryClaimEthRecordRequest) returns (QueryClaimEthRecordResponse) {
		option (google.api.http).get = "/clan/claim/v1beta1/claim_eth_record/{address}";
	}
// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryModuleAccountBalanceRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryModuleAccountBalanceResponse {
  // params defines the parameters of the module.
  repeated cosmos.base.v1beta1.Coin moduleAccountBalance = 1 [
    (gogoproto.moretags) = "yaml:\"coins\"",
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryClaimRecordRequest {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
}

message QueryClaimRecordResponse {
  ClaimRecord claim_record = 1 [
    (gogoproto.moretags) = "yaml:\"claim_record\"",
    (gogoproto.nullable) = false
  ];
}

message QueryClaimableForActionRequest {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  Action action = 2 [ (gogoproto.moretags) = "yaml:\"action\"" ];
}

message QueryClaimableForActionResponse {
  repeated cosmos.base.v1beta1.Coin coins = 1 [
    (gogoproto.moretags) = "yaml:\"coins\"",
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

message QueryTotalClaimableRequest {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
}

message QueryTotalClaimableResponse {
  repeated cosmos.base.v1beta1.Coin coins = 1 [
    (gogoproto.moretags) = "yaml:\"coins\"",
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

message QueryClaimEthRecordRequest {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
}

message QueryClaimEthRecordResponse {
	ClaimEthRecord ClaimEthRecord = 1 [
    (gogoproto.moretags) = "yaml:\"claim_record\"",
    (gogoproto.nullable) = false
  ];
}
// this line is used by starport scaffolding # 3
